--- a/samples/powerpc-405-linux-gnu/crosstool.config
+++ b/samples/powerpc-405-linux-gnu/crosstool.config
@@ -7,20 +7,18 @@ CT_ARCH_FLOAT_SW=y
 CT_ARCH_powerpc=y
 CT_TARGET_VENDOR="405"
 CT_KERNEL_linux=y
-CT_KERNEL_V_2_6_31_14=y
-CT_BINUTILS_V_2_19_1a=y
+CT_BINUTILS_PLUGINS=y
 CT_BINUTILS_FOR_TARGET=y
-CT_CC_V_4_3_2=y
-CT_CC_LANG_FORTRAN=y
 CT_CC_LANG_CXX=y
-CT_CC_LANG_JAVA=y
-CT_LIBC_glibc=y
-CT_LIBC_GLIBC_V_2_9=y
+# CT_CC_GCC_ENABLE_TARGET_OPTSPACE must not be set or gcc fails to build
+# due to use of crtsaves functions in crtend.o
+# CT_CC_GCC_ENABLE_TARGET_OPTSPACE is not set
+CT_CC_GCC_DISABLE_PCH=y
+CT_LIBC_EGLIBC_V_2_13=y
+CT_EGLIBC_OPT_SIZE=y
 # CT_LIBC_GLIBC_FORCE_UNWIND is not set
 CT_LIBC_GLIBC_USE_PORTS=y
-CT_DEBUG_dmalloc=y
-CT_DEBUG_duma=y
-CT_DEBUG_gdb=y
-CT_GDB_NATIVE=y
-CT_GMP_V_4_3_2=y
-CT_MPFR_V_2_4_2=y
+CT_LIBC_GLIBC_KERNEL_VERSION_CHOSEN=y
+CT_LIBC_GLIBC_MIN_KERNEL_VERSION="2.6.16"
+CT_GMP_V_5_0_1=y
+CT_MPFR_V_3_0_1=y
